src/main/java/com/example/prac/error/ex/ExceptionApi500.java
package com.example.prac.error.ex;

public class ExceptionApi500 extends RuntimeException {
    public ExceptionApi500(String message) {
        super(message);
    }
}
